added generic implementation strategy