@@ -3,38 +3,42 @@ import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class Registration {
     public static void main(String[] args) {
+        script();
+    }
 
+    static void script() {
         // Set the system property for the Chrome driver
-        String path = null;
-        try {
-            path = URLDecoder.decode(Registration.class.getClassLoader().getResource("chromedriver").getPath(), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        String path;
+        path = URLDecoder.decode(Registration.class.getClassLoader().getResource("chromedriver").getPath(), StandardCharsets.UTF_8);
         System.out.println(path);
         System.setProperty("webdriver.chrome.driver", path);
         System.setProperty("webdriver.http.factory", "jdk-http-client");
         // Create a new instance of ChromeDriver
         WebDriver driver = new ChromeDriver();
-
         // Navigate to the registration page
         driver.get("https://www.amazon.com/rapids/register");
 
         // Find the input fields by their IDs and fill them out
-        WebElement firstName = driver.findElement(By.id("ap_customer_name"));
-        firstName.sendKeys("John");
+        List<WebElement> webElements = new SpreadSheet().getIds()
+                .stream()
+                .peek(System.out::println)
+                .map(id -> driver.findElement(By.id(id)))
+                .collect(Collectors.toList());
+        new SpreadSheet().getRows().stream().peek(System.out::println)
+                .forEach(row -> IntStream.range(0, webElements.size() - 1)
+                        .forEach(i -> {
+                            webElements.get(i).clear();
+                            webElements.get(i).sendKeys(row.get(i));
+                        }));
 
-        WebElement lastName = driver.findElement(By.id("ap_email"));
-        lastName.sendKeys("johndoe@example.com");
-        WebElement password = driver.findElement(By.id("ap_password"));
-        password.sendKeys("mysecretpassword");
-        WebElement email = driver.findElement(By.id("ap_password_check"));
-        email.sendKeys("mysecretpassword");
 
         // Submit the form
 //        WebElement submitButton = driver.findElement(By.id("continue"));
